update: improve description

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="panel active"
             style="background-image: url('https://cdn.destguides.com/files/store/itinerarystop/41675/background_image/webp_large_202112291737-6dbed5d918e0ec0f23093f98386edf7a.webp')">
             <h3>The Kakum National Park</h3>
-            <p>Kakum National Park is home to many endangered animals and has a canopy walk. It is located in the Easten Region of Ghana.</p>
+            <p class="active">Kakum National Park is home to many endangered animals and has a canopy walk. It is located in the Easten Region of Ghana.</p>
         </div>
         <div class="panel"
             style="background-image: url('https://cdn.destguides.com/files/store/itinerarystop/41687/background_image/webp_large_202112291737-024e3f2480dc6420bd8318fd9161a3cb.webp')">
