update: replace some images

--- a/index.html
+++ b/index.html
@@ -54,14 +54,6 @@
                 like elephants and antelopes. Its vast savannahs and guided safaris offer an authentic African
                 ecotourism experience.</p>
         </div>
-        <div class="panel  "
-            style="background-image: url('https://travelertotraveler.files.wordpress.com/2018/09/oi000127.jpg')">
-            <h3>The Umbrella Rock</h3>
-            <p>The Umbrella Rock is a rock found at the site of the Boti Falls in Yilo Krobo District, Eastern
-                Region.
-                As the name implies, Umbrella Rock has an overhang on the top large enough to cover 12 to 15 people
-            </p>
-        </div>
 
         <div class="panel "
             style="background-image: url('https://1001beach.com/img/posts/1565/1200/labadi_beach-1.webp')">
@@ -71,7 +63,7 @@
                 vibrant atmosphere. It's famous for local cuisine, music, and stunning sunsets.</p>
         </div>
         <div class="panel "
-            style="background-image: url('https://lh4.ggpht.com/-BEzHJ_BQH_o/VR5rlTxk_JI/AAAAAAABA7k/_URl07jrDaM/paga-crocodiles-46.jpg?imgmax=800')">
+            style="background-image: url('images/Friendly_Paga_Crocodile_I.jpg')">
             <h3>Paga Crocodile Pond</h3>
             <p>Discover Ghana's Paga Crocodile Pond: a sacred oasis where humans and crocodiles coexist peacefully.
                 Touch history, feel the culture, and witness a unique bond between man and nature. Your
@@ -89,7 +81,7 @@
                 remember our shared history.</p>
         </div>
         <div class="panel "
-            style="background-image: url('https://dandoverspike.files.wordpress.com/2013/07/ghana-2013-okomfo-anokyes-sword-2.jpg')">
+            style="background-image: url('images/okomfo_anokye_sword.jpg')">
             <h3>Okomfo Anokye Sword Site</h3>
             <p>Situated on the grounds of the Komfo Anokye Teaching Hospital, Kumasi, is the Komfo Anokye Sword Site
                 which is seminal in Asante history. An over 300 year old sword wedged in the rockface is one of the
