update: Replace image

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="panel "
-            style="background-image: url('https://1001beach.com/img/posts/1565/1200/labadi_beach-1.webp')">
+            style="background-image: url('images/labadi_beach-1.webp')">
             <h3>Larbadi Beach</h3>
             <p>Labadi Beach in Accra, Ghana, is a popular coastal destination known for swimming, cultural events,
                 and
