feat: Add background

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 
 <body>
+    <main>
     <h1>10 AMAZING PLACES TO VISIT IN GHANA!</h1>
+    
     <div class="container">
         <div class="panel active"
             style="background-image: url('https://cdn.destguides.com/files/store/itinerarystop/41675/background_image/webp_large_202112291737-6dbed5d918e0ec0f23093f98386edf7a.webp')">
@@ -87,9 +89,9 @@
                 which is seminal in Asante history. An over 300 year old sword wedged in the rockface is one of the
                 centre artefacts and legends of the rich history of the Asante nation.</p>
         </div>
-
-    </div>
+</main>
     <script src="main.js"></script>
+    </div>
 </body>
 
 </html>
