update: improve mobile view layout

--- a/index.html
+++ b/index.html
@@ -97,6 +97,9 @@
                     centre artefacts and legends of the rich history of the Asante nation.</p>
             </div>
         </div>
+        <div class="dots-container">
+            <button class="dot dot-1"></button>
+        </div>
 
     </main>
     <script src="main.js"></script>
