feat: add active panel indicator

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </div>
         </div>
         <div class="dots-container">
-            <button class="dot dot-1"></button>
+            <button class="dot dot-1 dot-active"></button>
         </div>
 
     </main>
