feat: prevent selection of text from  screen

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
                     which is seminal in Asante history. An over 300 year old sword wedged in the rockface is one of the
                     centre artefacts and legends of the rich history of the Asante nation.</p>
             </div>
+            <!-- <h4>swipe</h4> -->
         </div>
         <div class="dots-container">
             <!-- <button class="dot dot-1 dot-active"></button> -->
